# SudokuGame

./: .gitignore  README.md
Projektni_zadatak/: Primer_dobre_dokumentacije.doc  README.md
sudoku9x9/: CMakeLists.txt  main.cpp
sudoku9x9/app/headers/: App.h  FileManager.h  Game.h
sudoku9x9/app/src/: App.cpp  FileManager.cpp  Game.cpp
sudoku9x9/sudoku_engine/headers/: Cell.h  Matrix.h  Sudoku9x9.h  SudokuSolver.h
sudoku9x9/sudoku_engine/src/: Cell.cpp  Matrix.cpp  Sudoku9x9.cpp  SudokuSolver.cpp
sudoku9x9/tests/MatrixTest/: MatrixTest.cpp  MatrixTestUtils.h
sudoku9x9/tests/Sudoku9x9Test/: Sudoku9x9Test.cpp  Sudoku9x9TestUtils.h
sudoku9x9/tests/SudokuSolverTest/: SudokuSolverTest.cpp
sudoku9x9/tests/_pyRoutines/: genRandStr.py  transposeMatrix.py
